Complete markup and fix styling for stats (particularly single figure stat modules);  Include js considerations for when stat label wraps to second line

--- a/web/assets/scss/components/_modules.scss
+++ b/web/assets/scss/components/_modules.scss
@@ -64,188 +64,6 @@ blockquote {
   }
 }
 
-.image-wrap {
-  overflow: hidden;
-  position: relative;
-  background-color: $concrete-med;
-
-  .image {
-    top: -0.5px;
-    left: -0.5px;
-    opacity: 0.9;
-    right: -0.5px;
-    bottom: -0.5px;
-    position: absolute;
-    background-size: cover;
-    background-position: center center;
-
-    &.-top-weight {
-      background-position: top center;
-    }
-  }
-
-  &.-portrait, &.-landscape, &.-square {
-    height: 0; 
-  }
-
-  &.-landscape {
-    padding-bottom: $landscape-padding;
-  }
-
-  &.-portrait {
-    padding-bottom: $portrait-padding;
-  }
-
-  &.-square {
-    padding-bottom: 100%;
-  }
-
-  @include media-md {
-    &.-landscape-md {
-      padding-bottom: $landscape-padding;
-    }
-
-    &.-portrait-md {
-      padding-bottom: $portrait-padding;
-    }
-  }
-}
-
-.project-module {
-  overflow: hidden;
-  position: relative;
-
-  &::after, &::before {
-    left: 0;
-    z-index: 1;
-    top: -100%; 
-    content: '';
-    width: 200%; // 100% if they choose half-covering overlay
-    height: 200%;
-    background: $red;
-    position: absolute;
-    transition: transform 0.5s $ease;
-    transform: skew(-18deg) translateX(-100%);
-    
-  }
-  &::before {
-    mix-blend-mode: color;
-  }
-  &::after {
-    opacity: 0.66;
-  } 
-  &:hover {
-    &::after, &::before {
-      transform: skew(-18deg) translateX(0);
-    }
-  }
-}
-.project-title {
-  color: $white;
-  padding: $padding;
-
-  h1, h2 {
-    @include font-smoothing;
-    margin: 0;
-    z-index: 2;
-    position: relative;
-  }
-
-  h1 {
-    @include font-p;
-  }
-
-  h2 {
-    @include font-captions;
-  }
-
-  a {
-    text-decoration: none;
-  }
-}
-// Ensure that, in a row rather than masonty, project-titles will stretch to match height of neighbor title if necessary
-.row-block {
-  .project-module {
-    display: flex;
-    flex-direction: column;
-    .project-title {
-      flex-grow: 1;
-    }
-  }
-}
-
-.stat-module {
-  background-color: $white;
-  padding: 1.5*$padding $padding;
-
-  @include media-md {
-    min-height: calc( (100vw - #{$padding})/2*(2/3) );
-  }
-
-  @include media-lg {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    min-height: calc( 100vw/3*(2/3) );
-  }
-
-  .figure {
-    @include font-stat-medium;
-    padding-right: 12px;
-
-    @include media-lg {
-      min-width: 50%;
-      @include font-stat-large;
-    }
-
-    .label {
-      top: -32px;
-      margin-left: 0.2ch;
-      position: relative;
-      @include font-size(22,22);
-
-      @include media-lg {
-        top: -46px;
-        @include font-size(33,33);
-      }
-    }
-    .slash-wrap {
-      display: inline-block;
-      position: relative;
-      padding-right: 4*$beat;
-
-      &::after {
-        right: 0;
-        width: 2px;
-        content: '';
-        top: 1.5*$beat;
-        bottom: 1.5*$beat;
-        position: absolute;
-        transform: skew(-18deg);
-        background-color: $concrete-light;
-
-        @include media-lg {
-          top: $beat;   
-          bottom: $beat;
-        }
-      }
-    }
-  }
-
-  .text {
-    @include font-details;
-    margin-top: $beat;
-    width: 100%;
-    max-width: 200px;
-
-    @include media-lg {
-      flex-basis: 200px;
-      text-align: right;
-      max-width: 18*$beat;
-      align-self: flex-end;
-    }
-  }
-}
 
 .post-module {
   .category {
@@ -262,85 +80,6 @@ blockquote {
 .person-module {
   .title {
     margin: 6px 0 0;
-  }
-}
-
-
-.stat-two-figure-module {
-  display: flex;
-  padding: $padding;
-  background: $white;
-  position: relative;
-  justify-content: space-between;
-
-  &::after {
-    right: 50%;
-    width: 2px;
-    content: '';
-    top: $padding;
-    bottom: $padding;
-    position: absolute;
-    transform: skew(-18deg);
-    background-color: $concrete-light;
-  }
-
-  @include media-md {
-    min-height: 320px;
-  }
-
-  .figure {
-    @include font-stat-small;
-    margin: 0;
-    max-width: 33.33%;
-    flex-basis: 33.33%;
-
-    @include media-md {
-      @include font-stat-medium;
-    }
-  }
-  .label {
-    @include font-details;
-    display: block;
-    margin: $beat 0 0;
-  }
-
-  .figure-2 {
-    align-self: flex-end;
-    text-align: right;
-  }
-}
-
-.image-module {
-  @include clearfix;
-  @include max-screen($breakpoint-md - 1px) {
-    margin-top: $padding;
-  }
-
-  .caption {
-    background: $white;
-    position: relative;
-    padding: 55px $padding $padding;
-
-    .icon {
-      top: 38px;
-      width: 7px;
-      height: 10px;
-      fill: $black;
-      left: $padding;
-      position: absolute;
-    }
-  }
-
-  &.-full .caption {
-    @include media-md {
-      display: inline-block;
-      width: 50%;
-      margin-top: -6*$beat;
-
-      &.-right {
-        float: right;
-      }
-    }
   }
 }
 
@@ -365,7 +104,7 @@ blockquote {
 
     &.-half {
       max-width: 50%;
-      flex-basis: 50%; 
+      flex-basis: 50%;
       padding-right: 30px;
     }
 
